# timeseriessplitbydate

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  faq.md  index.md  usage.md
examples/: basic_usage.py
notebooks/: demo.ipynb
src/timeseriessplitbydate/: __init__.py  splitter.py  synthetic.py
tests/: test_splitter.py
